<resources>
    <string name="app_name">Stormy</string>
    <string name="fetching_info">Fetching info</string>
    <string name="city_image">City image</string>
    <string name="something_went_wrong_maybe_internet_connection_lost">Something went wrong, maybe internet connection lost</string>
    <string name="radar_image">Radar image</string>
    <string name="no_radar_image_for_this_city">No radar image for this city</string>
    <string name="loading_radar_image">Loading radar image</string>
    <string name="time">Time</string>
    <string name="temp">Temp</string>
    <string name="rain">Rain?</string>
    <string name="wind">Wind\n(mph)</string>
    <string name="humidity">Humi\ndity</string>
    <string name="search_city">Search city</string>
    <string name="search_city_by_name">Search city by name</string>
    <string name="close">Close</string>
    <string name="no_cities_found">No cities found</string>
    <string name="go_back">Go back</string>
    <string name="city_radar_image">City radar image</string>
    <string name="update">Update</string>
    <string name="city_name_country_placeholder">%1$s, %2$s</string>
    <string name="temperature_placeholder">%1$s°</string>
    <string name="percentage_placeholder">%1$s°</string>

    <string-array name="week_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
</resources>