<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_home_city_big_image_image_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/city_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_dallas_placeholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_feeble_dark"
            app:layout_constraintBottom_toBottomOf="@+id/activity_home_city_big_image_image_view"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_city_big_image_image_view"
            app:layout_constraintStart_toStartOf="@+id/activity_home_city_big_image_image_view"
            app:layout_constraintTop_toTopOf="@+id/activity_home_city_big_image_image_view">

            <TextView
                android:id="@+id/activity_home_city_name_country_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Trinity, US" />

            <TextView
                android:id="@+id/activity_home_timestamp_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_home_city_name_country_text_view"
                tools:text="Aug 20, 2021, 3:18.15 PM" />

            <TextView
                android:id="@+id/activity_home_current_temperature_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_home_timestamp_text_view"
                tools:text="72°" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_home_daily_forecast_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_city_big_image_image_view" />

        <LinearLayout
            android:id="@+id/activity_home_forecast_panes_divider_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent_light"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_daily_forecast_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_home_hourly_forecast_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_hourly_forecast_labels_container_constraint_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_home_refresh_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_home_hourly_forecast_labels_container_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_hourly_forecast_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/activity_home_hourly_forecast_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_forecast_panes_divider_linear_layout">

            <TextView
                android:id="@+id/activity_home_hourly_forecast_label_time_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:text="@string/time"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_home_hourly_forecast_label_temperature_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/temp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/activity_home_hourly_forecast_label_time_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_home_hourly_forecast_label_rain_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/rain"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/activity_home_hourly_forecast_label_temperature_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_home_hourly_forecast_label_wind_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/wind"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/activity_home_hourly_forecast_label_rain_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_home_hourly_forecast_label_humidity_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/humidity"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/activity_home_hourly_forecast_label_wind_text_view"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_home_fetching_progress_bar_container_linear_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/activity_home_fetching_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_home_fetching_progress_bar_hint_text_view"
                style="@style/StyleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="25dp"
                android:text="@string/fetching_info"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_home_fetching_progress_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

